# JeFaPaTo

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  INSTALL.md  LICENSE.txt  NOTICE.md  README.md  build_linux.sh  build_mac-intel_v10.sh  build_mac-intel_v13.sh  build_mac-universal2_v13.sh  build_mac.sh  build_mac_m1-arm64.sh  build_windows-11.bat  create_jefapato.bat  dev_init.sh  dev_update.sh  env-dev.yml  env.yml  environment.yml  export.py  export.sh  eye_blinking_detector.py  jefapato.code-workspace  jefapato_create.bat  jefapato_start.bat  landmark_distances.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  results.csv  setup.cfg  setup.py  start_jefapato.bat  svg2icns.sh  update_jefapato.bat  view_emotion_recognition.py  (+4 more)
.github/workflows/: coding_lib_tests.yml  draft-pdf.yml
__exports__/__linux__/: jefapato_create.sh
__exports__/__mac__/: jefapato_create.command  jefapato_start.command  jefapato_start.sh  jefapato_update.command
__exports__/__windows__/: jefapato_create.bat  jefapato_update.bat
assets/icons/: icon_256x256.xcf
config/: logging.conf
frontend/: __init__.py  app.py  eye_blinking_freq.py  gui_interface.py  landmark_extraction.py  ui_eye_blinking_extraction.py  ui_facial_feature_extraction.py  widget_emotion_recognition.py  widget_eye_blinking.py  widget_eye_blinking_freq.py  widget_landmark_distance_2d.py  widget_landmark_distance_3d.py
frontend/config/: __init__.py  functions.py
frontend/jwidgets/: __init__.py  algorithms.py  blinkingtable.py  collapsiblebox.py  dialog.py  graph.py  (+10 more)
jefapato/: __init__.py  analyser.py  classifier.py  data_loader.py  data_processor.py  feature_extractor.py  plotter.py
paper/: compile.sh  paper.bib  paper.md
tests/: test_analyzer.py  test_blinking.py  test_earfeature.py  test_extractor.py
ui/: view_eye_blinking.ui  view_landmark_distances_3D.ui
(+78 files in other folders)
