[metadata]
name = JeFaPaTo
description = The Jena Facial Palsy Tool
author = Tim Büchner
author_email = tim.buechner@uni-jena.de
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/cvjena/JeFaPaTo
project_urls =
    Documentation = https://github.com/cvjena/JeFaPaTo
    Source = https://github.com/cvjena/JeFaPaTo
    Tracker = https://github.com/cvjena/JeFaPaTo/issues

platforms = Linux, Windows, Mac
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.10
install_requires =
    numpy
    opencv-python-headless~=4.8
    opencv-contrib-python~=4.8
    mediapipe==0.10.8
    protobuf>=3.11,<4

    # general scientific libs
    scipy~=1.8
    pandas>=2.2
    openpyxl
    matplotlib
    espbm

    # gui libs
    qtpy~=2.0
    qtawesome~=1.1
    PyQt6==6.5.3
    PyQt6-Qt6==6.5.3
    pyqtgraph~=0.12
    pyqtconfig~=0.9

    # logging and utils
    pluggy~=1.0
    tabulate~=0.8
    requests~=2.27
    structlog~=21.5
    rich~=12.0
    psutil~=5.8
    plyer # for notifications
    dbus-python ; sys_platform == "linux"

[options.packages.find]
where = src
exclude =
    tests

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 160
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
